assets/src/styles/main.scss
@import "variables";
@import "../../../node_modules/bootstrap/scss/bootstrap";
@import "fonts";

body {
  font-family: "Public Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

a {
  color: #0058be;
  font-weight: 600;
  text-decoration-skip-ink: auto;
  text-underline-offset: 1px;

  &:hover,
  &:focus {
    color: $oxford;
    text-decoration: underline;
  }
}

nav {
  &.bg-primary {
    background-color: $oxford !important;
  }

  .btn-outline-light {
    &:hover,
    &:focus {
      text-decoration: none;
    }

    &:focus {
      color: $white;
    }

    &:hover {
      color: $gray-900;
    }
  }
}

/* Add the ID and Status message columns for larger devices (992px and up) */
@media (min-width: 992px) {
  nav #workspace-dropdown + .dropdown-menu {
    left: auto;
    right: 0;
  }
}

.job-list .job-request {
  border-bottom: 2px solid #dee2e6;

  &:nth-child(2) {
    border-top: 2px solid #dee2e6;
  }
}

.job-list .job-requests {
  .status {
    margin: 0 0.5rem;
    width: 16px;
  }
  .workspace {
    margin-right: 0.5rem;
    min-width: 85px;
    width: 10%;
  }
  .backend {
    margin-right: 0.5rem;
    width: 90px;
  }
  .job-count {
    margin-right: 0.5rem;
    width: 5%;
  }
  .action {
    flex-grow: 1;
    margin-right: 0.5rem;
    width: 15%;
  }
  .started-at {
    margin-right: 0.5rem;
    width: 200px;
  }
}

#started-at-header {
  margin-right: 112px;
}

.status-icon {
  background-repeat: no-repeat;
  height: 16px;
  width: 16px;
}

@keyframes spinner {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.status-icon {
  &.failed {
    background-image: url("../icons/times.svg");
  }

  &.pending {
    background-image: url("../icons/history.svg");
  }

  &.running {
    animation: spinner 1.2s linear infinite;
    background-image: url("../icons/spinner.svg");
  }

  &.succeeded {
    background-image: url("../icons/check.svg");
  }

  &.unknown {
    background-image: url("../icons/question-circle.svg");
  }
}

.job-list .jobs .grid {
  display: grid;
  grid-template-columns: min-content min-content minmax(min-content, 80px) min-content;
  align-items: center;
  border-left: 2px solid grey;
  border-top: 1px solid #dee2e6;
  margin-bottom: 1rem;
  margin-left: 1rem;

  /* Add the ID and Status message columns for larger devices (992px and up) */
  @media (min-width: 992px) {
    grid-template-columns:
      min-content min-content min-content minmax(min-content, 80px)
      3fr min-content;
  }

  /*
   * Set a consistent top&bottom padding for Job cells.
   * Use right padding to add horizontal space between cells.
   * Status icon (the first cell) sets its own left padding.
   */
  > span {
    padding: 0.25rem 1rem 0.25rem 0;
  }
}

.latest-jobs {
  display: grid;
  grid-template-columns: min-content min-content min-content;
  align-items: center;

  /* Add the Status Message columns for larger devices (992px and up) */
  @media (min-width: 992px) {
    grid-template-columns: min-content min-content min-content min-content;
  }

  > span {
    padding: 0.5rem 1rem 0.5rem 0;
  }
}

.workspace-select {
  .name {
    color: $oxford-600;
  }

  .fuzzy-search {
    border-width: 2px;
  }

  .list-group {
    border: 2px solid #dee2e6;
    height: 375px;

    .list-group-item {
      border: 0;
      border-bottom: 1px solid #dee2e6;

      &:last-child {
        border-bottom: 0;
      }
    }

    a:hover span,
    a:hover code {
      text-decoration: underline;
    }
  }
}

.filters .list-group-item {
  padding: 0;

  a:first-child {
    display: inline-block;
    padding: 0.75rem 0.25rem 0.75rem 1.25rem;
  }

  &.active {
    a:first-child {
      color: white;
    }

    a.close {
      display: inline-block;
      margin: 0.75rem 1.25rem 0.75rem 0.25rem;
      opacity: 1;

      span {
        height: 16px;
        text-shadow: none;
        width: 16px;

        &:hover {
          color: white;
        }
      }
    }
  }
}

.breadcrumb-container {
  background-color: $oxford-50;
}

[data-toggle="collapse"][aria-expanded="true"] {
  .collapse--show {
    display: none;
  }

  .collapse--hide {
    display: inline-block;
  }
}

[data-toggle="collapse"][aria-expanded="false"] {
  .collapse--show {
    display: inline-block;
  }

  .collapse--hide {
    display: none;
  }
}

details summary {
  .summary--show {
    display: inline;
  }

  .summary--hide {
    display: none;
  }
}

details[open] summary {
  .summary--show {
    display: none;
  }

  .summary--hide {
    display: inline;
  }
}

.btn[aria-disabled] {
  cursor: not-allowed;
}

.table-responsive {
  background: linear-gradient(90deg, #fff 30%, rgba(255, 255, 255, 0)),
    linear-gradient(90deg, rgba(255, 255, 255, 0), #fff 70%) 0 100%,
    radial-gradient(
      farthest-side at 0 50%,
      rgba(0, 0, 0, 0.2),
      rgba(0, 0, 0, 0)
    ),
    radial-gradient(
        farthest-side at 100% 50%,
        rgba(0, 0, 0, 0.2),
        rgba(0, 0, 0, 0)
      )
      0 100%;
  background-attachment: local, local, scroll, scroll;
  background-color: #fff;
  background-position: 0 0, 100%, 0 0, 100%;
  background-repeat: no-repeat;
  background-size: 40px 100%, 40px 100%, 14px 100%, 14px 100%;
  overflow-x: auto;
}

.job-table {
  th,
  td {
    vertical-align: baseline;
  }
}

.form__help-text,
legend {
  p {
    margin-bottom: 0.5rem;
  }

  > *:last-child {
    margin-bottom: 0;
  }
}

@import "staff";
@import "utilities";

